# ubisoft-laforge-spkrid

./: .gitignore  Dockerfile  README.md  pyproject.toml  requirements.txt
scripts/: compute_eer.py  compute_u3d.py  config.yaml
src/spkrid/: eer.py  equalization.py  rhythm.py  speaker_embedding.py
